--- a/Application/Website/Jumbleblocks.Website/Jumbleblocks.Website.csproj
+++ b/Application/Website/Jumbleblocks.Website/Jumbleblocks.Website.csproj
@@ -50,7 +50,7 @@
       <HintPath>..\..\..\Libraries\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="NHibernate, Version=3.2.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+    <Reference Include="NHibernate, Version=3.3.1.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Libraries\NHibernate.dll</HintPath>
     </Reference>
@@ -90,6 +90,7 @@
     <Compile Include="Models\Admin\ControlPanelViewModel.cs" />
     <Compile Include="Models\Authentication\LoginViewModel.cs" />
     <Compile Include="Models\BlogPost\BlogPostListingItemModel.cs" />
+    <Compile Include="Models\BlogPost\DeletedModel.cs" />
     <Compile Include="Models\BlogPost\FullBlogPostModel.cs" />
     <Compile Include="Models\BlogPost\FrontPageItemModel.cs" />
     <Compile Include="Models\BlogPost\FrontPageModel.cs" />
@@ -235,6 +236,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\_AdminLayout.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\BlogPost\Deleted.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
