--- a/Application/Website/Jumbleblocks.Website/Web.config
+++ b/Application/Website/Jumbleblocks.Website/Web.config
@@ -82,6 +82,11 @@
       <appender-ref ref="LogFileAppender" />
     </logger>
 
+    <logger name="NHibernate.SQL" additivity="false">
+      <level value="DEBUG" />
+      <appender-ref ref="NHibernateLogFileAppender" />
+    </logger>
+
     <appender name="LogFileAppender" type="log4net.Appender.FileAppender">
       <param name="File" value="App_Data/Log.log" />
       <param name="AppendToFile" value="true" />
@@ -94,5 +99,20 @@
         <appender-ref ref="LogFileAppender" />
       </root>
     </appender>
+
+    <appender name="NHibernateLogFileAppender" type="log4net.Appender.FileAppender">
+      <param name="File" value="App_Data/LogNhibernate.log" />
+      <param name="AppendToFile" value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+      </layout>
+
+      <root>
+        <level value="ERROR" />
+        <appender-ref ref="LogFileAppender" />
+      </root>
+    </appender>
+    
+    
   </log4net>
 </configuration>
