--- a/DAL/Blog/DAL.Blog/Jumbleblocks.DAL.Blog.csproj
+++ b/DAL/Blog/DAL.Blog/Jumbleblocks.DAL.Blog.csproj
@@ -33,11 +33,11 @@
   <ItemGroup>
     <Reference Include="Iesi.Collections, Version=1.0.1.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\resources\Iesi.Collections.dll</HintPath>
+      <HintPath>..\..\..\Libraries\Iesi.Collections.dll</HintPath>
     </Reference>
-    <Reference Include="NHibernate, Version=3.2.0.4000, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="NHibernate, Version=3.2.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\resources\NHibernate.dll</HintPath>
+      <HintPath>..\..\..\Libraries\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
