pulls title image from Configuration

--- a/Application/Website/Jumbleblocks.Website/Web.config
+++ b/Application/Website/Jumbleblocks.Website/Web.config
@@ -6,18 +6,18 @@
 
 <configuration>
   <configSections>
-    <section name="BlogSettings" type="Jumbleblocks.Website.Configuration.BlogConfigurationSection, Jumbleblocks.Website"/>
+    <section name="blogSettings" type="Jumbleblocks.Website.Configuration.BlogConfigurationSection, Jumbleblocks.Website"/>
     <section name="Jumbleblocks.Security" type="Jumbleblocks.Web.Security.Configuration.SecurityConfigurationSection, Jumbleblocks.Web.Security"/>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
   <connectionStrings>
     <add name="BlogDb" connectionString="Data Source=(local)\ANDYWINSEVENSQL;Initial Catalog=BlogDb;Integrated Security=SSPI;"/>
   </connectionStrings>
-  <BlogSettings Title="Jumbleblocks" PagePostSummaryCount="5" DefaultController="BlogPost" DefaultAction="Index">
-    <RedirectUrls authenticationDefaultRedirectUrl="~/ControlPanel">
+  <blogSettings title="Jumbleblocks" pagePostSummaryCount="5" defaultController="BlogPost" defaultAction="Index" titleImagePath="~/BlogImages/Jumbleblocks2.png" >
+    <redirectUrls authenticationDefaultRedirectUrl="~/ControlPanel">
       <accepted url="http://jumbleblocks.com"/>
-    </RedirectUrls>
-  </BlogSettings>
+    </redirectUrls>
+  </blogSettings>
   <Jumbleblocks.Security>
     <cookieSlidingExpiration hours="5"/>
     <cacheSlidingExpiration minutes="45"/>
@@ -82,11 +82,6 @@
       <appender-ref ref="LogFileAppender" />
     </logger>
 
-    <logger name="NHibernate.SQL" additivity="false">
-      <level value="DEBUG" />
-      <appender-ref ref="NHibernateLogFileAppender" />
-    </logger>
-
     <appender name="LogFileAppender" type="log4net.Appender.FileAppender">
       <param name="File" value="App_Data/Log.log" />
       <param name="AppendToFile" value="true" />
@@ -100,7 +95,12 @@
       </root>
     </appender>
 
-    <appender name="NHibernateLogFileAppender" type="log4net.Appender.FileAppender">
+    <!--  <logger name="NHibernate.SQL" additivity="false">
+      <level value="DEBUG" />
+      <appender-ref ref="NHibernateLogFileAppender" />
+    </logger>-->
+
+   <!-- <appender name="NHibernateLogFileAppender" type="log4net.Appender.FileAppender">
       <param name="File" value="App_Data/LogNhibernate.log" />
       <param name="AppendToFile" value="true" />
       <layout type="log4net.Layout.PatternLayout">
@@ -111,7 +111,7 @@
         <level value="ERROR" />
         <appender-ref ref="LogFileAppender" />
       </root>
-    </appender>
+    </appender>-->
     
     
   </log4net>
