changed to VS2012 solution
changed tests to be MS tests

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ obj
 TestResults
 /Application\Website\Jumbleblocks.Website\App_Data/Log.log
 /Application\Website\Jumbleblocks.Website/App_Data
+/*.suo
+/_UpgradeReport_Files
