--- a/Application/Website/Jumbleblocks.Website/Web.config
+++ b/Application/Website/Jumbleblocks.Website/Web.config
@@ -11,7 +11,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
   <connectionStrings>
-    <add name="BlogDb" connectionString="Data Source=(local)\ANDYWINSEVENSQL;Initial Catalog=BlogDb;Integrated Security=SSPI;"/>
+    <add name="BlogDb" connectionString="Data Source=ANDY-WIN8;Initial Catalog=BlogDb;Integrated Security=True;"/>
   </connectionStrings>
   <blogSettings title="Jumbleblocks" pagePostSummaryCount="5" defaultController="BlogPost" defaultAction="Index" titleImagePath="~/BlogImages/Jumbleblocks2.png" >
     <redirectUrls authenticationDefaultRedirectUrl="~/ControlPanel">
